--- a/image_analytics.ipynb
+++ b/image_analytics.ipynb
@@ -26,8 +26,8 @@
       "metadata": {
         "id": "3S4S7SIfJl22",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "4ec065d0-9806-40aa-e4ed-378d1f2bb878"
+        "outputId": "4ec065d0-9806-40aa-e4ed-378d1f2bb878",
+        "colab": {}
       },
       "source": [
         "!pip install azure.cognitiveservices.vision.computervision\n",
@@ -68,8 +68,8 @@
       "metadata": {
         "id": "rTdFwiMkJl2_",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "5f29bafd-84c1-4b78-80a1-76c0cbdf57a5"
+        "outputId": "5f29bafd-84c1-4b78-80a1-76c0cbdf57a5",
+        "colab": {}
       },
       "source": [
         "from azure.cognitiveservices.vision.computervision import ComputerVisionClient\n",
@@ -120,8 +120,8 @@
       "metadata": {
         "id": "gl8xt2woJl3K",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "82957485-ac65-4573-8dba-752ea3622127"
+        "outputId": "82957485-ac65-4573-8dba-752ea3622127",
+        "colab": {}
       },
       "source": [
         "subscription_key = '10f93b9fbccd48209981e11e3c672401'\n",
@@ -174,8 +174,8 @@
       "metadata": {
         "id": "paN4AEYfJl3o",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "13d5b1b9-735e-4f47-e943-f1fe158c57b1"
+        "outputId": "13d5b1b9-735e-4f47-e943-f1fe158c57b1",
+        "colab": {}
       },
       "source": [
         "'''\n",
@@ -241,13 +241,13 @@
       "metadata": {
         "id": "X3iMzt4aJl3w",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "f2455db7-ac37-4f63-df09-6ad48d9b03af"
+        "outputId": "f2455db7-ac37-4f63-df09-6ad48d9b03af",
+        "colab": {}
       },
       "source": [
         "print(\"===== Detect Faces - remote =====\")\n",
         "# Get an image with faces\n",
-        "remote_image_url_faces = \"https://raw.githubusercontent.com/sahilsaxena21/Micorosoft_case_competition/master/img_1_jpeg.jpg\"\n",
+        "remote_image_url_faces = \"https://raw.githubusercontent.com/sahilsaxena21/Microsoft_case_competition/master/img_1_jpeg.jpg\"\n",
         "# Select the visual feature(s) you want.\n",
         "remote_image_features = [\"faces\"]\n",
         "# Call the API with remote URL and features\n",
@@ -334,8 +334,8 @@
       "metadata": {
         "id": "6p8fCP84Jl35",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "ad0f6616-e1b7-4969-d303-2a07b98744dc"
+        "outputId": "ad0f6616-e1b7-4969-d303-2a07b98744dc",
+        "colab": {}
       },
       "source": [
         "#use the bounding box of each person to get the count of people and their location within the store\n",
