--- a/image_analytics.ipynb
+++ b/image_analytics.ipynb
@@ -127,7 +127,7 @@
         "subscription_key = '10f93b9fbccd48209981e11e3c672401'\n",
         "endpoint = 'https://compvisioncentralus.cognitiveservices.azure.com/'\n",
         "computervision_client = ComputerVisionClient(endpoint, CognitiveServicesCredentials(subscription_key))\n",
-        "remote_image_url = \"https://raw.githubusercontent.com/sahilsaxena21/Micorosoft_case_competition/master/img_1_jpeg.jpg\"\n",
+        "remote_image_url = \"https://raw.githubusercontent.com/sahilsaxena21/Microsoft_case_competition/master/img_1_jpeg.jpg\"\n",
         "computervision_client = ComputerVisionClient(endpoint, CognitiveServicesCredentials(subscription_key))"
       ],
       "execution_count": 0,
@@ -157,6 +157,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "flteHwSzc92H",
+        "colab_type": "text"
+      },
+      "source": [
+        "It is assumed that the security surveillance system within each store is able record pictures and snapshots on a regular schedule. It is to be noted that in this example, the image is saved in a remote link. For a more feasible implementation, our team will have to look into building a pipeline to continuously feed the images recorded by the security surveillance system to Azure Blob storage."
       ]
     },
     {
